Fixing snapshotchart label alignment

--- a/src/components/views/PolicyPage/ListPoliciesPage/IntroSection/IntroSection.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/IntroSection/IntroSection.module.scss
@@ -15,6 +15,6 @@
 
 .barChartAndParagraph {
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
+  grid-template-columns: minmax(0, 1.5fr) 0.75fr;
   grid-gap: 30px;
 }
