--- a/src/components/views/PolicyPage/ListPoliciesPage/SnapshotChart/SnapshotChartSection.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/SnapshotChart/SnapshotChartSection.module.scss
@@ -1,5 +1,6 @@
 .sectionContainer {
   display: flex;
+  height: 27rem;
 }
 
 .header2 {
@@ -15,16 +16,56 @@
   color: #e55e37;
 }
 .chartContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: stretch;
+
   > h3 {
     margin-left: 3rem;
   }
   h3 {
     margin-bottom: 1em;
   }
+}
+
+.labels {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: right;
+  // to keep it lined up
+  // because of the legend
+  // padding-bottom: 30px;
+
+  h3 {
+    margin-bottom: 1em;
+  }
+
+  > p {
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    line-height: 1.2;
+    font-size: 15px;
+  }
+}
+
+.headerContainer {
+  display: flex;
+  margin-bottom: 1rem;
+  .chartHeader {
+    margin-left: 16.5%;
+  }
+}
+
+.legendContainer {
   .legend {
     display: flex;
     height: 20px;
     margin-top: 10px;
+    margin-left: 28%;
 
     .entry {
       display: flex;
@@ -38,26 +79,5 @@
         margin-right: 0.5em;
       }
     }
-  }
-}
-
-.labels {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  text-align: right;
-  // to keep it lined up
-  // because of the legend
-  padding-bottom: 30px;
-
-  h3 {
-    margin-bottom: 1em;
-  }
-
-  > p {
-    height: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
   }
 }
